--- a/css/main.css
+++ b/css/main.css
@@ -304,6 +304,10 @@ section {
 
 /* jQuery */
 @media screen and (min-width: 992px) {
+  .text-block {
+    width: 100%;
+    /* float: right; */
+  }
   .navbar {
     background: transparent;
   }
