--- a/css/main.css
+++ b/css/main.css
@@ -195,9 +195,11 @@ section {
   top: 0;
   left: 0;
   width: 100%;
+  height: 72px;
   /* background-color: var(--parchment); */
   /* z-index: 999; */
-  margin-top: 0.8rem;
+  box-sizing: border-box;
+  padding: 0 12px;
 }
 .brand-and-toggler {
   font-size: 1.65rem;
@@ -230,6 +232,9 @@ section {
   color: var(--night-rider);
 }
 .navbar-nav {
+  width: 100%;
+  height: 100%;
+  padding-top: 25%;
   margin: 0.2rem 0 0.6rem 0;
   background-color: var(--bg);
 }
@@ -250,9 +255,13 @@ section {
 
 .navbar-collapse {
   display: none;
-  position: absolute;
-  width: 100vh;
-  height: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
   z-index: 999;
 }
 .hero-div {
