--- a/css/main.css
+++ b/css/main.css
@@ -233,7 +233,7 @@ section {
 }
 .navbar-nav {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   padding-top: 25%;
   margin: 0.2rem 0 0.6rem 0;
   background-color: var(--bg);
@@ -263,7 +263,7 @@ section {
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   z-index: 999;
 }
 .hero-div {
@@ -343,6 +343,7 @@ section {
   }
   .navbar-collapse {
     display: block !important;
+    /* height: 100% !important; */
     /* position: absolute; */
     /* float: right; */
 
