--- a/css/main.css
+++ b/css/main.css
@@ -233,7 +233,7 @@ section {
 }
 .navbar-nav {
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
   padding-top: 25%;
   margin: 0.2rem 0 0.6rem 0;
   background-color: var(--bg);
