--- a/css/main.css
+++ b/css/main.css
@@ -235,7 +235,7 @@ section {
   width: 100%;
   height: 100%;
   padding-top: 25%;
-  margin: 0.2rem 0 0.6rem 0;
+  margin: 0;
   background-color: var(--bg);
   /* display: inline; */
   /* float: right; */
@@ -243,6 +243,9 @@ section {
 .nav-item {
   padding: 0.6rem 0;
   text-align: center;
+}
+.active {
+  height: 100%;
 }
 .nav-link {
   /* text-transform: uppercase; */
@@ -263,7 +266,7 @@ section {
   right: 0;
   bottom: 0;
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
   z-index: 999;
 }
 .hero-div {
@@ -343,6 +346,7 @@ section {
   }
   .navbar-collapse {
     display: block !important;
+    height: 0% !important;
     /* height: 100% !important; */
     /* position: absolute; */
     /* float: right; */
@@ -356,8 +360,9 @@ section {
     justify-content: right;
     padding-right: 1.5em;
     padding-top: 2.5em;
-    margin: 0;
+    margin: 0.2rem 0 0.6rem 0;
     background-color: transparent !important;
+    height: 0% !important;
   }
   .nav-item {
     /* float: right; */
