--- a/css/main.css
+++ b/css/main.css
@@ -335,13 +335,34 @@ section {
   /* color: var(); */
 }
 
+/* Narrow view for mobile */
 @media only screen and (max-width: 992px) {
   .container {
     width: 94%;
   }
+  /* .navbar-nav.narrow {
+    width: 100%;
+    height: 100%;
+    padding-top: 25%;
+    margin: 0;
+    background-color: var(--bg);
+    /* display: inline; */
+  /* float: right; */
+  /* } */
+  /* .navbar-collapse.narrow {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+  } */
 }
 
-/* jQuery */
+/* wide view / Desktop view */
 @media screen and (min-width: 992px) {
   .text-block {
     width: 100%;
@@ -373,6 +394,7 @@ section {
     /* z-index: 998; */
     /* background-color: var(--bg2); */
   }
+
   .navbar-nav {
     display: flex;
     /* position: relative; */
@@ -383,6 +405,7 @@ section {
     background-color: transparent !important;
     height: 0% !important;
   }
+
   .nav-item {
     /* float: right; */
     margin-left: 1.8rem;
